--- a/aprendizaje-no-supervizado.ipynb
+++ b/aprendizaje-no-supervizado.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e378efb2",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "93360c1f",
    "metadata": {},
    "outputs": [],
@@ -76,10 +76,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2578bbd4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Modelo: Isolation Forest\n",
+      "Accuracy : 0.9974473942002829\n",
+      "Precision: 0.25773195876288657\n",
+      "Recall   : 0.2540650406504065\n",
+      "F1-score : 0.25588536335721596\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.ensemble import IsolationForest\n",
     "\n",
@@ -104,10 +117,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "87d1c34e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Modelo: Local Outlier Factor\n",
+      "Accuracy : 0.9965696067863501\n",
+      "Precision: 0.0\n",
+      "Recall   : 0.0\n",
+      "F1-score : 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.neighbors import LocalOutlierFactor\n",
     "\n",
@@ -133,10 +159,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "43606f2e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Modelo: One-Class SVM\n",
+      "Accuracy : 0.9938660215514366\n",
+      "Precision: 0.07687120701281187\n",
+      "Recall   : 0.23170731707317074\n",
+      "F1-score : 0.11544303797468354\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "from sklearn.svm import OneClassSVM\n",
